program finalized. foreign key constraint enabled.

--- a/templates/add.html
+++ b/templates/add.html
@@ -78,7 +78,7 @@
           <label id="course">Course:</label>
           <select name="course"  style="width: 250px; height: 35px; border: 3px solid #ccc;">
           	{% for item in data %}
-          		<option >{{item["CourseID"]}}</option>
+          		<option >{{item['CourseID']}}</option>
           	{% endfor %}
           </select>
           <br>
