--- a/templates/update_info.html
+++ b/templates/update_info.html
@@ -99,6 +99,13 @@
           <label id="course">Course:</label>
           <input type="text" name= "course" placeholder="Ex. BS CpE ,   . . ." align="right" >
           <br>
+          <!--<label id="course">Course:</label>
+          <select name="course"  style="width: 250px; height: 35px; border: 3px solid #ccc;">
+            {% for row in copied %}
+              <option >{{row['CourseID']}}</option>
+            {% endfor %}
+          </select>
+          <br>-->
           <label id="Yr">Year Level:</label>
           <input type="text" name= "Yr_Level" placeholder="Ex. IV ,   . . ." align="right" >
           <br>
